<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/textColorLinkInverse"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nome_texto"
        style="@style/Estilo_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_padrao"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/nome_digitado"
        style="@style/Estilo_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/foto_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:contentDescription="@string/descricao_objeto"
        android:visibility="visible"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/bio_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_top"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texto_conteudo"
                style="@style/Estilo_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="@dimen/padding_start"
                android:paddingEnd="@dimen/padding_end"
                android:text="@string/text_conteudo" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="75dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/anime_cabeca" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/nome_edit"
                style="@style/Estilo_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/qual_seu_nome"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/feito" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>